# fetchbin

./: .pre-commit-config.yaml  README.md  fetchbin.sh  justfile  pyproject.toml
.github/workflows/: ci.yml
src/fetchbin/: console.py  exceptions.py  fetch.py
tests/: test_console.py  test_guess.py
